refactor and login UI complete

--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -7,13 +7,6 @@
 </ion-header>
 
 
-<ion-content text-center padding>
+<ion-content text-center>
 
-  <ion-input [(ngModel)]="todo.name" placeholder="Todo name"></ion-input>
-  <button ion-button (click)="saveTodo()">SAVE</button>
-  <ion-list *ngIf="todos">
-    <ion-item *ngFor="let todo of todos" (click)="editTodo(todo)">
-      {{ todo.name }}
-    </ion-item>
-  </ion-list>
 </ion-content>
