--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,18 +1,28 @@
-<!--
-  Generated template for the Login page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>Login</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
-<ion-content padding>
-
+<ion-content>
+  <div class="center">
+    <img class="logo" src="assets/logo-full.png">
+    <ion-row class="login-form">
+      <ion-col>
+        <ion-segment [(ngModel)]="authMode">
+          <ion-segment-button value="login">
+            LOGIN
+          </ion-segment-button>
+          <ion-segment-button value="register">
+            REGISTER
+          </ion-segment-button>
+        </ion-segment>
+        <ion-list inset>
+          <ion-item>
+            <ion-label><ion-icon name="person"></ion-icon></ion-label>
+            <ion-input [(ngModel)]="email" placeholder="email" type="text"></ion-input>
+          </ion-item>
+          <ion-item>
+            <ion-label><ion-icon name="lock"></ion-icon></ion-label>
+            <ion-input [(ngModel)]="password" placeholder="password" type="password"></ion-input>
+          </ion-item>
+        </ion-list>
+        <button ion-button full (click)="login()" color="primary" class="login-button">{{ authMode }}</button>
+      </ion-col>
+    </ion-row>
+  </div>
 </ion-content>
