--- a/src/pages/grades/grades.html
+++ b/src/pages/grades/grades.html
@@ -1,12 +1,12 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Search</ion-title>
+    <ion-title>grades</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content text-center>
+<ion-content padding>
 
 </ion-content>
