--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -13,12 +13,20 @@
         </ion-segment>
         <ion-list inset>
           <ion-item>
-            <ion-label><ion-icon name="person"></ion-icon></ion-label>
+            <ion-label><ion-icon name="{{ authMode == 'login' ? 'person' : 'mail' }}"></ion-icon></ion-label>
             <ion-input [(ngModel)]="email" placeholder="email{{ authMode == 'login' ? ' / username' : '' }}" type="text"></ion-input>
           </ion-item>
           <ion-item *ngIf="authMode == 'register'">
             <ion-label><ion-icon name="at"></ion-icon></ion-label>
             <ion-input [(ngModel)]="username" placeholder="username" type="text"></ion-input>
+          </ion-item>
+          <ion-item *ngIf="authMode == 'register'">
+            <ion-label><ion-icon name="person"></ion-icon></ion-label>
+            <ion-input [(ngModel)]="firstName" placeholder="first name" type="text"></ion-input>
+          </ion-item>
+          <ion-item *ngIf="authMode == 'register'">
+            <ion-label><ion-icon name="people"></ion-icon></ion-label>
+            <ion-input [(ngModel)]="lastName" placeholder="last name" type="text"></ion-input>
           </ion-item>
           <ion-item>
             <ion-label><ion-icon name="lock"></ion-icon></ion-label>
