added task page and style refactor with ios mode

--- a/src/pages/courses/courses.html
+++ b/src/pages/courses/courses.html
@@ -13,7 +13,7 @@
       placeholder="Search for people, courses, etc.">
     </ion-searchbar>
     <ion-buttons end>
-      <button ion-button icon-only class="add-button" (click)="addCourse()">
+      <button ion-button icon-only (click)="addCourse()">
         <ion-icon name="add"></ion-icon>
       </button>
     </ion-buttons>
