--- a/src/pages/explore/explore.html
+++ b/src/pages/explore/explore.html
@@ -14,7 +14,7 @@
       placeholder="Search for people, courses, etc.">
     </ion-searchbar>
     <ion-buttons end>
-      <button ion-button icon-only class="options-button" (click)="optionsPressed()">
+      <button ion-button icon-only (click)="optionsPressed()">
         <ion-icon name="options"></ion-icon>
       </button>
     </ion-buttons>
