--- a/src/pages/loading/loading.html
+++ b/src/pages/loading/loading.html
@@ -1,6 +1,6 @@
 <ion-content>
   <div class="center">
     <img src="assets/logo.png">
-    <ion-spinner name="dots"></ion-spinner>
+    <ion-spinner></ion-spinner>
   </div>
 </ion-content>
