--- a/src/pages/agenda/agenda.html
+++ b/src/pages/agenda/agenda.html
@@ -15,13 +15,12 @@
       </ion-segment-button>
     </ion-segment>
     <ion-buttons end>
-      <button ion-button icon-only class="add-button" (click)="addTask()">
+      <button ion-button icon-only (click)="addTask()">
         <ion-icon name="add"></ion-icon>
       </button>
     </ion-buttons>
   </ion-navbar>
 </ion-header>
-
 
 <ion-content>
   <ion-list>
