agenda/task progress

--- a/src/pages/task/task.html
+++ b/src/pages/task/task.html
@@ -34,11 +34,11 @@
     </ion-item>
     <ion-item>
       <ion-label floating>Start Date</ion-label>
-      <ion-datetime displayFormat="MM/DD/YY/HH/MM" [(ngModel)]="task.startDate"></ion-datetime>
+      <ion-datetime displayFormat="MMM DD, YYYY h:mm a" min="2016" max="2020" minuteValues="0,15,30,45" [(ngModel)]="startDate"></ion-datetime>
     </ion-item>
     <ion-item>
       <ion-label floating>End Date</ion-label>
-      <ion-datetime displayFormat="MM/DD/YY/HH/MM" [(ngModel)]="task.endDate"></ion-datetime>
+      <ion-datetime displayFormat="MMM DD, YYYY h:mm a" min="2016" max="2020" minuteValues="0,15,30,45" [(ngModel)]="endDate"></ion-datetime>
     </ion-item>
   </ion-list>
 </ion-content>
