--- a/src/pages/agenda/agenda.html
+++ b/src/pages/agenda/agenda.html
@@ -24,11 +24,11 @@
 
 <ion-content>
   <ion-list>
-    <ion-item *ngFor="let task of tasks">
-      {{ task.title }}
-      <button ion-button color="danger" (click)="deleteTask(task)" end>
+    <ion-item *ngFor="let task of tasks" (click)="openTask(task)">
+      <h3>{{ task.name }}</h3>
+      <p>{{ task.description }}</p>
+      <button ion-button color="danger" (click)="deleteTask(task)" item-end>
         <ion-icon name="trash"></ion-icon>
-        Delete
       </button>
     </ion-item>
   </ion-list>
