--- a/src/pages/explore/explore.html
+++ b/src/pages/explore/explore.html
@@ -23,6 +23,11 @@
 </ion-header>
 
 
-<ion-content text-center>
-
+<ion-content>
+  <ion-list>
+    <ion-item *ngFor="let post of posts" (click)="openPost(post)">
+      <h3>{{ post.title }}</h3>
+      <p>{{ post.description }}</p>
+    </ion-item>
+  </ion-list>
 </ion-content>
