write post ui, new fonts, asset folder refactor, interests provider

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,6 +1,6 @@
 <ion-content>
   <div class="center">
-    <img class="logo" src="assets/logo-full.png">
+    <img class="logo" src="assets/images/logo-full.png">
     <ion-row class="login-form">
       <ion-col>
         <ion-segment [(ngModel)]="authMode">
