--- a/src/pages/loading/loading.html
+++ b/src/pages/loading/loading.html
@@ -1,6 +1,6 @@
 <ion-content>
   <div class="center">
-    <img src="assets/logo.png">
+    <img src="assets/images/logo.png">
     <ion-spinner></ion-spinner>
   </div>
 </ion-content>
