removed angular animations and ionic-tooltips

--- a/src/pages/explore/explore.html
+++ b/src/pages/explore/explore.html
@@ -26,7 +26,7 @@
 <ion-content>
   <div class="write-post" [class.writing-post]="writingPost">
     <ion-textarea (ionBlur)="writePostBlurred()" (ionFocus)="writePostFocused()" placeholder="Share something new..."></ion-textarea>
-    <button ion-button tooltip="Start a poll" >
+    <button ion-button>
       <ion-icon name="stats"></ion-icon>
     </button>
     <button ion-button>
