--- a/src/pages/explore/explore.html
+++ b/src/pages/explore/explore.html
@@ -25,7 +25,7 @@
 
 <ion-content>
   <div class="write-post" [class.writing-post]="writingPost">
-    <ion-textarea (ionBlur)="writePostBlurred()" (ionFocus)="writePostFocused()" placeholder="Share something new..."></ion-textarea>
+    <ion-textarea [(ngModel)]="post.text" (ionBlur)="writePostBlurred()" (ionFocus)="writePostFocused()" placeholder="Share something new..."></ion-textarea>
     <button ion-button>
       <ion-icon name="stats"></ion-icon>
     </button>
