--- a/src/pages/agenda/agenda.html
+++ b/src/pages/agenda/agenda.html
@@ -2,8 +2,7 @@
   <ion-navbar>
     <ion-buttons class="profile-avatar" left>
       <button ion-button menuToggle>
-        <img *ngIf="authProvider.currentUser && authProvider.currentUser.imageUrl" [src]="authProvider.currentUser.imageUrl"> 
-        <img *ngIf="!authProvider.currentUser || !authProvider.currentUser.imageUrl" src="assets/user-placeholder.png">
+        <img [src]="authProvider.currentUser.imageUrl ? authProvider.currentUser.imageUrl : 'assets/images/user-placeholder.png'">
       </button>
     </ion-buttons>
     <ion-segment [(ngModel)]="viewMode">
