--- a/src/pages/courses/courses.html
+++ b/src/pages/courses/courses.html
@@ -2,11 +2,10 @@
   <ion-navbar>
     <ion-buttons class="profile-avatar" left>
       <button ion-button menuToggle>
-        <img *ngIf="authProvider.currentUser && authProvider.currentUser.imageUrl" [src]="authProvider.currentUser.imageUrl"> 
-        <img *ngIf="!authProvider.currentUser || !authProvider.currentUser.imageUrl" src="assets/user-placeholder.png">
+        <img [src]="authProvider.currentUser.imageUrl ? authProvider.currentUser.imageUrl : 'assets/images/user-placeholder.png'">
       </button>
     </ion-buttons>
-      <ion-searchbar
+    <ion-searchbar
       class="search-bar"
       [(ngModel)]="searchInput"
       (ionInput)="updateSearch()"
